Добавил кнопку подробенее. Доабвил, чтобы после создания цветка, переходило на страничку с его информацией

--- a/manager-app/src/main/resources/templates/main/flowers/flower_create.html
+++ b/manager-app/src/main/resources/templates/main/flowers/flower_create.html
@@ -14,14 +14,13 @@
     </ul>
 </div>
 
-<div>
 
     <form data-th-action="@{/main/flowers/create}"  method="post">
         <input type="text" name="title"   placeholder="Название"/><br>
-        <input type="number" name="price"  placeholder="Цена"/><br>
-        <input type="number" name="extraCharge"  placeholder="Наценка"/><br>
-        <input type="number" name="accountingQuantity" placeholder="Учётное количество"/><br>
-        <input type="number" name="actualQuantity" placeholder="Фактическое количество"/><br>
+        <input type="number" name="price"  placeholder="Цена" data-th-value="0"/><br>
+        <input type="number" name="extraCharge"  placeholder="Наценка" data-th-value="0"/><br>
+        <input type="number" name="accountingQuantity" placeholder="Учётное количество" data-th-value="0"/><br>
+        <input type="number" name="actualQuantity" placeholder="Фактическое количество" data-th-value="0"/><br>
         <input type="submit" value="Добавить цветок"/>
     </form>
 </div>
