Добавил кнопку удалить цветок

--- a/manager-app/src/main/resources/templates/main/flowers/flower_info.html
+++ b/manager-app/src/main/resources/templates/main/flowers/flower_info.html
@@ -18,5 +18,10 @@
 </ul>
 
 
+<form method="post" data-th-action="@{/main/flower/{flower}/delete(flower=${flower.id})}">
+    <button type="submit">Удалить</button>
+</form>
+
+
 </body>
 </html>
