Добавил кнопку обновления данных цветка

--- a/manager-app/src/main/resources/templates/main/flowers/flower_create.html
+++ b/manager-app/src/main/resources/templates/main/flowers/flower_create.html
@@ -24,5 +24,10 @@
         <input type="submit" value="Добавить цветок"/>
     </form>
 </div>
+
+<form method="get" >
+    <a data-th-href="@{/main/flowers/list}">
+        <button  type="button"> Назад </button></a>
+</form>
 </body>
 </html>
