--- a/manager-app/src/main/resources/templates/main/flowers/flower_info.html
+++ b/manager-app/src/main/resources/templates/main/flowers/flower_info.html
@@ -71,18 +71,16 @@
     <button type="submit">Удалить</button>
 </form>
 
-<form method="get" data-th-href="@{/main/flower/{flowerId}/update(flowerId=${flower.id})}">
-    <button type="button">Обновить</button>
+
+<form method="get" >
+    <a data-th-href="@{@{/main/flower/{flowerId}/update(flowerId=${flower.id})}}">
+        <button type="button">Обновить</button></a>
 </form>
 
-<form method="get" data-th-href="@{/main/flowers/list}">
-    <button type="button">Назад</button>
+<form method="get" >
+    <a data-th-href="@{/main/flowers/list}">
+        <button type="button">Назад</button></a>
 </form>
-
-
-
-
-
 
 
 </body>
