--- a/manager-app/src/main/resources/templates/main/flowers/flowers_list.html
+++ b/manager-app/src/main/resources/templates/main/flowers/flowers_list.html
@@ -102,6 +102,10 @@
     <a data-th-href="@{/main/flowers/create}" class="add-button">
         <i class="fas fa-plus"></i> Добавить Цветок
     </a>
+
+    <a data-th-href="@{/main/supply-flowers}" class="add-button">
+        <i class="fas fa-plus"></i> Поставка
+    </a>
 </div>
 
 </body>
