--- a/manager-app/src/main/resources/templates/main/main_page.html
+++ b/manager-app/src/main/resources/templates/main/main_page.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Главная страница</title>
 </head>
 <body>
+
+
+<form>
+    <a data-th-href="@{/main/flowers/list}">
+        <button type="button">Перейти в каталог с цветами</button>
+    </a>
+</form>
 
 </body>
 </html>
