--- a/manager-app/src/main/resources/templates/main/type_flower/type_flower_create_page.html
+++ b/manager-app/src/main/resources/templates/main/type_flower/type_flower_create_page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Добавить цветок</title>
+    <title>Создание  типа</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -111,7 +111,7 @@
 
 <div class="container">
     <div class="form-container">
-        <h1>Добавить цветок</h1>
+        <h1>Создать тип</h1>
 
         <div class="error-message" data-th-if="${errors}">
             <h2>Допущены Ошибки</h2>
@@ -120,49 +120,21 @@
             </ul>
         </div>
 
-        <form data-th-action="@{/main/flowers/create}" method="post">
+        <form data-th-action="@{/main/type_flower/create}" method="post">
             <div class="input-container">
-                <label for="title" class="input-label">Название:</label>
-                <input type="text" id="title" name="title"  data-th-value="${payload?.title}"/>
+                <label for="type_flower" class="input-label">Тип</label>
+                <input type="text" id="type_flower" name="type"/>
             </div>
 
-            <div class="input-container">
-                <label for="type" class="input-label">Тип:</label>
-                <input type="text" id="type" name="type" list="typeOptions"/>
-                <datalist id="typeOptions">
-                    <option data-th-each="typeFlower: ${typeFlowers}"
-                            data-th-value="${typeFlower.typeName}"></option>
-                </datalist>
-            </div>
-
-            <div class="input-container">
-                <label for="price" class="input-label">Цена:</label>
-                <input type="number" id="price" name="price" data-th-value="${payload?.price}"/>
-            </div>
-            <div class="input-container">
-                <label for="extraCharge" class="input-label">Наценка:</label>
-                <input type="number" id="extraCharge" name="extraCharge" data-th-value="${payload?.extraCharge}"/>
-            </div>
-            <div class="input-container">
-                <label for="accountingQuantity" class="input-label">Учётное количество:</label>
-                <input type="number" id="accountingQuantity" name="accountingQuantity"  data-th-value="${payload?.accountingQuantity}"/>
-            </div>
-            <div class="input-container">
-                <label for="actualQuantity" class="input-label">Фактическое количество:</label>
-                <input type="number" id="actualQuantity" name="actualQuantity"  data-th-value="${payload?.actualQuantity}"/>
-            </div>
-            <input type="submit" value="Добавить цветок"/>
+            <input type="submit" value="Добавить Тип"/>
         </form>
 
     </div>
-    <div class="image-container">
-        <h2>Фотография цветка</h2>
-        <img class="image-preview" src="#" alt="Preview">
-    </div>
+
 </div>
 
 <form method="get">
-    <a data-th-href="@{/main/flowers/list}">
+    <a data-th-href="@{/main/type_flower/list}">
         <button class="back-button" type="button">Назад</button>
     </a>
 </form>
