--- a/manager-app/src/main/resources/templates/main/type_flower/type_flower_list_page.html
+++ b/manager-app/src/main/resources/templates/main/type_flower/type_flower_list_page.html
@@ -87,7 +87,7 @@
         </tr>
         <tr th:each="flower: ${type_flowers}">
             <td th:text="${flower.id}">ID</td>
-            <td th:text="${flower.type}">Тип</td>
+            <td th:text="${flower.typeName}">Тип</td>
 
         </tr>
     </table>
